--- a/stack.css
+++ b/stack.css
@@ -6,20 +6,15 @@
   scroll-behavior: smooth;
 }
 html, body {
-  height: 100vh;
   margin:  0;
 }
-/* body {
-  background: #cac2ff;
-} */
 #app {
   width: 100%;
   height: 100%;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
 table {
   width: 80%;
-  /* border: 2px solid #000; */
   margin: 3em auto;
   border-radius: 2em;
   overflow: hidden;
@@ -27,12 +22,10 @@ table {
   background: #cac2ff;
   box-shadow: 3px 3px 15px 5px #0004;
 }
-/* table * {
-  border: 2px solid #000;
-} */
 table th {
   background-color: rebeccapurple;
   height: 3em;
+  color: #fff;
 }
 tr td {
   text-align: center;
