--- a/stack.css
+++ b/stack.css
@@ -53,3 +53,10 @@ table #profile:hover {
   padding-right: .8em;
   box-shadow: 1px 1px 5px #0002;
 }
+
+
+@media screen and (max-width: 530px) {
+  table {
+    font-size: .74em;
+  }
+}
